--- a/public/registrar-incidencia.html
+++ b/public/registrar-incidencia.html
@@ -22,8 +22,8 @@
         <a href="/incidencias.html" class="nav-link">
             ⚠️ <span>Incidencias</span>
         </a>
-        <a href="/registrar-usuario" class="nav-link">
-            ⚙️
+        <a href="/configuracion.html" class="nav-link">
+            ⚙️ <span>Configuración</span>
         </a>
     </div>
 </nav>
