--- a/public/consultar-empleados.html
+++ b/public/consultar-empleados.html
@@ -25,8 +25,8 @@
         <a href="/incidencias.html" class="nav-link">
             ⚠️ <span>Incidencias</span>
         </a>
-        <a href="/registrar-usuario" class="nav-link">
-            ⚙️
+        <a href="/configuracion.html" class="nav-link">
+            ⚙️ <span>Configuración</span>
         </a>
     </div>
 </nav>
@@ -37,12 +37,10 @@
     
 
     <input type="text" id="buscador" placeholder="Buscar por nombre o ID..." class="input"><button id="btn-exportar-todo" class="btn-export">
-      📥 Exportar PDF + Excel</button> 
+      📥 Exportar PDF o Excel</button> 
     <br>
 
-<script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.25/dist/jspdf.plugin.autotable.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+
 <div>
 <div class="table-container">
     <table class="data-table">
@@ -63,5 +61,24 @@
 
 <div id="pagination-controls" class="pagination-controls"></div>
 </div>
+<div id="exportModal" class="modal-overlay">
+    <div class="modal-content">
+        <span class="close-modal" id="modal-close">&times;</span>
+        <h3>📥 Exportar Datos</h3>
+        <p>Selecciona el formato:</p>
+        <div class="export-options">
+            <button id="btn-confirm-pdf" class="btn-export-option btn-pdf">
+                📄 Descargar PDF
+            </button>
+            <button id="btn-confirm-excel" class="btn-export-option btn-excel">
+                📊 Descargar Excel
+            </button>
+        </div>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.25/dist/jspdf.plugin.autotable.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
