--- a/public/consultar-incidencias.html
+++ b/public/consultar-incidencias.html
@@ -23,8 +23,8 @@
         <a href="/incidencias.html" class="nav-link">
             ⚠️ <span>Incidencias</span>
         </a>
-        <a href="/registrar-usuario" class="nav-link">
-            ⚙️
+        <a href="/configuracion.html" class="nav-link">
+            ⚙️ <span>Configuración</span>
         </a>
     </div>
 </nav>
@@ -38,7 +38,7 @@
         <label for="search">Buscar:</label>
         <input type="text" id="search" placeholder="Buscar por activo o empleado...">
         <button id="search-button" class="btn">🔎 Buscar</button>
-        <button id="btn-exportar-todo">📥 Exportar PDF + Excel</button>
+        <button id="btn-exportar-todo">📥 Exportar PDF o Excel</button>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
@@ -91,12 +91,27 @@
     
     <div id="pagination-controls" class="pagination-controls"></div>
   </div>
+  <div id="exportModal" class="modal-overlay">
+    <div class="modal-content">
+        <span class="close-modal" id="modal-close">&times;</span>
+        <h3>📥 Exportar Datos</h3>
+        <p>Selecciona el formato:</p>
+        <div class="export-options">
+            <button id="btn-confirm-pdf" class="btn-export-option btn-pdf">
+                📄 Descargar PDF
+            </button>
+            <button id="btn-confirm-excel" class="btn-export-option btn-excel">
+                📊 Descargar Excel
+            </button>
+        </div>
+    </div>
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.25/dist/jspdf.plugin.autotable.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>  
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="/consultar-incidencias.js"></script>
   <script src="/auth.js"></script>
   <script src="chatbot.js"></script>
